# async-notify

./: .bumpversion.cfg  .flake8  .gitignore  CHANGES  CHANGES.rst  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  CREDITS  INSTALL  MANIFEST.in  Makefile  README.md  my_token.txt  o365_token.txt  pyproject.toml  sample.html  sample_minified.html  setup.py  test_email.py  test_notify.py  tox.ini
.claude/agents/: sdd-qa.md  sdd-research.md  sdd-worker.md
.claude/commands/: sdd-brainstorm.md  sdd-done.md  sdd-fromjira.md  sdd-next.md  sdd-proposal.md  sdd-spec.md  sdd-start.md  sdd-status.md  sdd-task.md
.github/workflows/: codeql-analysis.yml  publish-to-test-pypi.yml  publish.yml  release.yml
docs/: api.rst  architecture.rst  conf.py  examples.rst  index.rst  models.rst  providers.rst  requirements-dev.txt  server.rst
etc/: navigator.ini
examples/: def_teams.py  telegram_server.py  test_aws.py  test_bot.py  test_client.py  test_client_email.py  test_client_telegram.py  test_dialpad.py  test_dummy.py  test_email.py  test_gmail.py  test_install.py  test_model.py  test_notify_client.py  test_o365.py  test_outlook.py  test_sendgrid.py  test_server.py  test_ses.py  test_ses_client.py  test_slack.py  test_smtp.py  test_teams.py  test_teams_form.py  test_telegram.py  test_twilio.py  test_zoom_sms.py  zoom_phone_lookup.py
notify/: __init__.py  __main__.py  conf.py  exceptions.c  exceptions.pxd  exceptions.py  exceptions.pyx  models.py  notify.py  settings.py  templates.py  utils.py  version.py
notify.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  requires.txt
notify/providers/: __init__.py  _mime_utils.py  abstract.py  base.py  mail.py  message.py
notify/providers/amazon_ses/: __init__.py  amazon_ses.py
notify/providers/aws/: __init__.py  aws.py  settings.py
notify/providers/aws_email/: __init__.py  aws_email.py
notify/providers/dialpad/: __init__.py  dialpad.py
notify/providers/dummy/: __init__.py  dummy.py
notify/providers/email/: __init__.py  email.py  settings.py
notify/providers/gmail/: __init__.py  gmail.py  settings.py
notify/providers/office365/: __init__.py  office365.py  settings.py
notify/providers/onesignal/: __init__.py  onesignal.py  settings.py
notify/providers/outlook/: __init__.py  outlook.py
notify/providers/sendgrid/: __init__.py  sendgrid.py  settings.py
notify/providers/ses/: __init__.py  ses.py
notify/providers/slack/: __init__.py  settings.py  slack.py
notify/providers/smtp/: __init__.py  smtp.py
notify/providers/teams/: __init__.py  _msgraph_patch.py  teams.py
notify/providers/telegram/: Telegram.py  __init__.py  settings.py  telegram.py
notify/providers/twilio/: __init__.py  settings.py  twilio.py
notify/providers/twitter/: __init__.py  settings.py  twitter.py
notify/providers/xmpp/: __init__.py  settings.py  xmpp.py
notify/providers/zoom/: __init__.py  zoom.py
notify/providers_old/: __init__.py
notify/providers_old/office365/: office365.py
notify/providers_old/onesignal/: __init__.py  onesignal.py
notify/providers_old/twilio/: __init__.py
notify/server/: __init__.py  client.py  queue.py  server.py  wrapper.py
notify/tests/: __init__.py  base.py
notify/types/: __init__.py  typedefs.c  typedefs.pyx
notify/utils/: __init__.py  functions.py
sdd/: WORKFLOW.md
sdd/proposals/: NAV-8390-email-utf8.brainstorm.md
sdd/specs/: NAV-8390-email-utf8.spec.md
sdd/tasks/active/: TASK-001-mime-utils-helper.md  TASK-002-retrofit-mail-py.md  TASK-003-retrofit-smtp-py.md  TASK-004-retrofit-ses-py.md  TASK-005-aiosmtplib-floor-bump.md  TASK-006-offline-utf8-tests.md
sdd/tasks/completed/: TASK-001-mime-utils-helper.md  TASK-002-retrofit-mail-py.md  TASK-003-retrofit-smtp-py.md  TASK-004-retrofit-ses-py.md  TASK-005-aiosmtplib-floor-bump.md  TASK-006-offline-utf8-tests.md
sdd/tasks/index/: NAV-8390-email-utf8.json
sdd/templates/: brainstorm.md  finding.md  proposal.md  research_plan.prompt.md  research_plan.schema.json  spec.md  state.schema.json  synthesis.prompt.md  task.md
templates/: .compiled  email_applied.html  template_hello.txt
tests/: test_email_utf8.py  test_outlook1.py  test_outlook2.py  test_ses.py
