[project]
name = "async-notify"
authors = [
  {name = "Jesus Lara Gimenez", email = "jesuslarag@gmail.com"},
]
keywords = ["asyncio", "notification", "telegram", "slack", "email"]
description = "Asyncio-based Library for send notifications (messages) to users."
classifiers=[
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python",
  "Typing :: Typed",
  "Environment :: Web Environment",
  "Framework :: AsyncIO",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: BSD License",
]
requires-python = ">=3.9.16"
dynamic = ["version", "readme", "dependencies", "license", "urls", "optional-dependencies", "entry-points"]


[options]
packages = "find:"
install_requires = ["asyncdb", "navconfig"]
python_requires = ">=3.9"
platforms = "manylinux_2_28_x86_64"


[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
]

filterwarnings = [
    "error",
    'ignore:The loop argument is deprecated since Python 3\.8, and scheduled for removal in Python 3\.10:DeprecationWarning:asyncio',
]

[tool.mypy]
pretty = true
ignore_missing_imports = true

[tool.flake8]
ignore = 'E501,W503,E203'

[build-system]
requires = [
    'setuptools==75.7.0',
    'Cython==3.0.11',
    'wheel==0.44.0',
    'setuptools-scm',
]
build-backend = "setuptools.build_meta"
