[build-system]
requires = [
    "setuptools>=67.6.1",
    "setuptools_scm[toml]>=6.0",
    "Cython==3.0.11",
    "wheel>=0.44.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "async-notify"
dynamic = ["version"]
description = "Asyncio-based Library for sending notifications (messages) to users."
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.9.16"
authors = [{ name = "Jesus Lara Gimenez", email = "jesuslarag@gmail.com" }]
keywords = ["asyncio", "notification", "telegram", "slack", "email"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
  "Environment :: Web Environment",
  "Framework :: AsyncIO",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

# Core runtime deps (lifted from your previous setup.py)
dependencies = [
  "uvloop>=0.20.0",
  "aiosmtplib>=3.0.2",
  "python-datamodel>=0.3.12",
  "navconfig[default]>=1.7.0",
  "jinja2>=3.1.4",
  "cloudpickle>=3.1.0",
  "emoji>=1.7.0,<2.15.0",
  "moviepy==2.2.1",
  "aiobotocore[boto3]==2.15.2",
  "pillow>=8.3.2",
]

[project.optional-dependencies]
default = [
  "aiogram>=3.14.0",
  "slack_bolt==1.18.0",
]
telegram = [
  "aiogram>=3.14.0",
]
push = [
  "onesignal-sdk==2.0.0",
]
google = [
  "gmail==0.6.3",
  "google-auth>=2.6.0",
  "google-auth-httplib2>=0.1.0",
]
azure = [
  "pyo365==0.1.3",
  "o365==2.0.37",
  "msal>=1.22.0,<1.32.0",
  "Office365-REST-Python-Client==2.5.13",
  "msgraph-core==1.3.2",
  "azure-identity==1.20.0",
  "msgraph-sdk==1.22.0",
]
all = [
  "gmail==0.6.3",
  "google-auth>=2.6.0",
  "google-auth-httplib2>=0.1.0",
  "onesignal-sdk==2.0.0",
  "o365==2.0.37",
  "Office365-REST-Python-Client==2.5.13",
  "msal>=1.22.0,<1.30.1",
  "PySocks==1.7.1",
  "pyshorteners==1.0.1",
  "twilio==8.2.2",
  "slixmpp==1.10.0",
  "slack_bolt==1.18.0",
  "aiogram>=3.14.0",
  "aiobotocore[boto3]==2.15.2",
  "qworker>=1.12.7",
  "msgraph-core==1.3.2",
  "azure-identity==1.20.0",
  "msgraph-sdk==1.22.0",
]

[project.scripts]
notify = "notify.__main__:main"

[project.urls]
Homepage = "https://github.com/phenobarbital/async-notify"
Source = "https://github.com/phenobarbital/async-notify"
Tracker = "https://github.com/phenobarbital/async-notify/issues"
Documentation = "https://github.com/phenobarbital/async-notify/"
Funding = "https://paypal.me/phenobarbital"
"Say Thanks!" = "https://saythanks.io/to/phenobarbital"

[tool.setuptools]
license-files = ["LICENSE*"]

# Versioning like ai-parrot: generate a _version.py AND keep current pattern reading notify.version.__version__
[tool.setuptools_scm]
write_to = "notify/_version.py"

[tool.setuptools.dynamic]
version = { attr = "notify.version.__version__" }

# Package discovery
[tool.setuptools.packages.find]
exclude = [
  "env*", "etc*", "bin*", "contrib*", "docs*", "documents*", "tests*",
  "examples*", "libraries*", "db*", "cache*", ".jupyter*", "locale*",
  "lab*", "notebooks*", "resources*", "static*", "templates*", "settings*",
  "videos*"
]

[tool.setuptools.package-data]
notify = ["py.typed"]

[tool.uv]
# Keep the moviepy pin consistent (pattern borrowed from ai-parrot)
override-dependencies = ["moviepy==2.2.1"]

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers"]
filterwarnings = [
  "error",
  "ignore:The loop argument is deprecated since Python 3\\.8, and scheduled for removal in Python 3\\.10:DeprecationWarning:asyncio",
]

[tool.mypy]
pretty = true
ignore_missing_imports = true

[tool.flake8]
ignore = "E501,W503,E203"
